--- a/public/frontend/assets/css/common.css
+++ b/public/frontend/assets/css/common.css
@@ -2,6 +2,10 @@
 @import "normalize.css";
 
 /* ==common style== */
+input, select, textarea {
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+}
 
 
 /* ==custom utility== */
@@ -83,6 +87,17 @@ a.btn_more {
     border-radius: .5rem;
     padding: .8rem 1.6rem;
     display: inline-block;
+}
+a.btn_more, a.btn_more svg path {
+    transition: all 0.3s ease-in-out;
+} 
+
+a.btn_more:hover {
+    background: var(--blue);
+    color: var(--white);
+}
+a.btn_more:hover svg path {
+    stroke: var(--white);
 }
 
 /* ==Red tag common css page== */
@@ -194,14 +209,64 @@ a.btn_more {
     padding-top: 1.6rem;
 }
 .new_account_create a {
-    font-size: 1.4rem;
+    font-size: 1.5rem;
     font-weight: 400;
     line-height: 1.8rem;
     color: var(--black);
 }
-.new_account_create a:hover {
+.new_account_create a>label {
+    font-weight: 700;
     color: var(--blue);
+    cursor: pointer;
+    text-decoration: underline;
 }
+
+/* validation error */
+p.error {
+    font-size: 1.4rem !important;
+    font-weight: normal !important;
+    line-height: 1.8rem !important;
+    color: #df0505;
+    padding-bottom: 1rem;
+    text-align: center;
+}
+
+/* forgot password */
+a.forgot_passowrd {
+    font-size: 2.2rem;
+    line-height: 3.3rem;
+    font-weight: normal;
+    color: var(--blue);
+    text-align: center;
+    display: block;
+}
+
+/* auto popup modal */
+.atpb_wrapper {
+    position: absolute;
+    top: -1.2rem;
+    right: -1.2rem;
+    width: 2.4rem;
+    height: 2.4rem;
+    border-radius: 50%;
+    background: black;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1px;
+}
+.atp.btn-close {
+    background: url(../images/icons/close.svg);
+    background: transparent url(../images/icons/close.svg) center/1em auto no-repeat;
+    width: 1.6rem;
+    height: 1.6rem;
+    opacity: 1;
+}
+.atp.btn-close:focus {
+    box-shadow: none;
+}
+
 
 /* ==custom container width== */
 @media (min-width: 1366px) {
