--- a/public/frontend/assets/css/footer.css
+++ b/public/frontend/assets/css/footer.css
@@ -26,6 +26,11 @@
     line-height: 3rem;
     color: #979797;    
 }
+.website_address a>span {
+    font-family: 'Inter', sans-serif;
+    font-size: 1.7rem;
+    line-height: 2.8rem;
+}
 
 .icon li::before{
     color: #13A89E;
@@ -44,7 +49,7 @@
 }
 
 .right_border{
-    border-right: 1px solid #4F7F6C;
+    border-right: 1px solid rgba(79, 127, 108, 0.2);
 }
 .right_border.left_content {
     padding-right: 12rem;
@@ -104,7 +109,7 @@
 
 /* three */
 .footer_inner_four {
-    border-top     : 1px solid #4F7F6C;
+    border-top     : 1px solid rgba(79, 127, 108, 0.2);
     padding        : 3.8rem 0 4.5rem;
     display        : flex;
     justify-content: space-between;
@@ -142,7 +147,7 @@
     text-align: center;
     padding-top: 3rem;
     padding-bottom: 3rem;
-    border-top: 1px solid #4F7F6C;
+    border-top: 1px solid rgba(79, 127, 108, 0.2);
 }
 
 
@@ -159,11 +164,11 @@
     padding-top: 3rem;
     padding-bottom: 1.8rem;
     text-align: center;
-    border-top: 1px solid #4F7F6C;
+    border-top: 1px solid rgba(79, 127, 108, 0.2);
 }
 
 .acceptPayment img{
-    max-width: 40.5rem;
+    max-width: 148.6rem;
     width: 100%;
 }
 .acceptPayment h6{
@@ -222,7 +227,7 @@
     }
 
     .center_content{
-        padding-left: 0;
+        padding-left: 7.5px;
     }
 }
 
@@ -260,6 +265,7 @@
     }
     .footer h6 {
         margin-top: 3.5rem;
+        font-size: 1.7rem;
     }
 
     .footer_inner_two a {
