--- a/public/frontend/assets/css/header.css
+++ b/public/frontend/assets/css/header.css
@@ -44,6 +44,13 @@
     margin-right: 0;
 }
 
+.navbar-light .navbar-nav .nav-link.eng_font {
+    font-size    : 2.1rem;
+    line-height  : 3.7rem;
+    font-family  : 'Inter', sans-serif;
+    font-weight  : 500;
+}
+
 .navbar-brand img {
     /* max-width: 16.7rem; */
     max-width: 20rem;
@@ -448,6 +455,13 @@
     margin       : auto;
     margin-top   : 200px;
     margin-bottom: 41px;
+}
+
+.side_menu li a.eng_font{
+    font-family: "Inter",sans-serif;
+    font-weight: 500;
+    font-size  : 19px;
+    line-height: 33px;
 }
 
 .sidebar_logo img {
